--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,28 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.perspective {
+  perspective: 1000px;
+}
+
+.preserve-3d {
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+/* Optional: Add hover effect to flip the card */
+.perspective:hover .preserve-3d {
+  transform: rotateY(180deg);
+}
 .middle {
   margin-left: auto;
   margin-right: auto;
