--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
 .perspective {
   perspective: 1000px;
 }
