--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,5 +123,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    line-height: initial !important;
+    letter-spacing: -0.025em;
   }
 }
